better language support

--- a/public/assets/i18n/translations/en.json
+++ b/public/assets/i18n/translations/en.json
@@ -1,13 +1,20 @@
 {
-  "hello.label": "Hello",
-  "thankyou.label": "Thank you",
-  "contact.label": "contact",
-  "contact.name":"name",
-  "contact.email":"email",
-  "contact.subject":"subject",
-  "contact.message":"message",
-  "contact.submit":"submit",
-  "auth.usernameOrEmail":"username/email",
-  "auth.password":"password",
-  "submit":"submit"
+	"welcome.label": "welcome",
+	"hello.label": "Hello",
+	"thankyou.label": "Thank you",
+	"contact.label": "contact",	
+	"leaderboard.label":"leaderboard",
+	"services.label":"services",
+	"pastprojects.label":"past projects",
+	"affiliates.label":"affiliates",
+	"aboutme.label":"About me",
+	"login/register.label":"login/register",
+	"contact.name":"name",
+	"contact.email":"email",
+	"contact.subject":"subject",
+	"contact.message":"message",
+	"contact.submit":"submit",
+	"auth.usernameOrEmail":"username/email",
+	"auth.password":"password",
+	"submit":"submit"
 }
