--- a/public/assets/i18n/translations/pt.json
+++ b/public/assets/i18n/translations/pt.json
@@ -1,13 +1,21 @@
 {
-"hello.label": "Olá",
-"thankyou.label": "Obrigado",
-"contact.label": "contacto",
-"contact.name":"nome",
-"contact.email":"email",
-"contact.subject":"assunto",
-"contact.message":"mensagem",
-"contact.submit":"submeter",
-"auth.usernameOrEmail":"utilizador/email",
-"auth.password":"password",
-"submit":"submeter"
+	"welcome.label": "Benvindo",
+	"hello.label": "Olá",
+	"thankyou.label": "Obrigado",
+	"contact.label": "contacto",	
+	"auth.password":"password",
+	"leaderboard.label":"leaderboard",
+	"services.label":"serviços",
+	"pastprojects.label":"projectos anteriores",
+	"affiliates.label":"affiliates",
+	"aboutme.label":"Sobre mim",
+	"login/register.label":"entrar/registrar",
+	"contact.name":"nome",
+	"contact.email":"email",
+	"contact.subject":"assunto",
+	"contact.message":"mensagem",
+	"contact.submit":"submeter",
+	"auth.usernameOrEmail":"utilizador/email",
+	"auth.password":"password",
+	"submit":"submeter"
 }
