language support on titles

--- a/public/assets/i18n/translations/en.json
+++ b/public/assets/i18n/translations/en.json
@@ -5,8 +5,10 @@
 	"contact.label": "contact",	
 	"leaderboard.label":"leaderboard",
 	"services.label":"services",
+	"servicesprovided.label":"services offered",
 	"pastprojects.label":"past projects",
 	"affiliates.label":"affiliates",
+	"affiliateprogram.label":"affiliate program",
 	"aboutme.label":"About me",
 	"login/register.label":"login/register",
 	"contact.name":"name",
