--- a/public/assets/i18n/translations/pt.json
+++ b/public/assets/i18n/translations/pt.json
@@ -6,8 +6,10 @@
 	"auth.password":"password",
 	"leaderboard.label":"leaderboard",
 	"services.label":"serviços",
+	"servicesprovided.label":"serviços prestados",
 	"pastprojects.label":"projectos anteriores",
-	"affiliates.label":"affiliates",
+	"affiliates.label":"afiliados",
+	"affiliateprogram.label":"programa de afiliados",
 	"aboutme.label":"Sobre mim",
 	"login/register.label":"entrar/registrar",
 	"contact.name":"nome",
