--- a/public/assets/i18n/translations/ch.json
+++ b/public/assets/i18n/translations/ch.json
@@ -5,10 +5,12 @@
 	"contact.label": "联系方式",
 	"leaderboard.label":"排行榜",
 	"services.label":"提供的服务",
+	"servicesprovided.label":"提供的服务",
 	"aboutme.label":"关于我",
 	"login/register.label":"登录/寄存器",
 	"pastprojects.label":"过去的项目",
 	"affiliates.label":"会员",
+	"affiliateprogram.label":"会员计划",
 	"contact.name":"姓名",
 	"contact.email":"邮箱",
 	"contact.subject":"assunto",
