--- a/public/assets/i18n/translations/ch.json
+++ b/public/assets/i18n/translations/ch.json
@@ -3,6 +3,7 @@
 	"hello.label": "您好",
 	"thankyou.label": "谢谢",
 	"contact.label": "联系方式",
+	"username":"utilizador",
 	"leaderboard.label":"排行榜",
 	"services.label":"提供的服务",
 	"servicesprovided.label":"提供的服务",
