--- a/public/assets/i18n/translations/en.json
+++ b/public/assets/i18n/translations/en.json
@@ -4,6 +4,7 @@
 	"thankyou.label": "Thank you",
 	"contact.label": "contact",	
 	"leaderboard.label":"leaderboard",
+	"username":"username",
 	"services.label":"services",
 	"servicesprovided.label":"services offered",
 	"pastprojects.label":"past projects",
