--- a/public/assets/i18n/translations/pt.json
+++ b/public/assets/i18n/translations/pt.json
@@ -4,6 +4,7 @@
 	"thankyou.label": "Obrigado",
 	"contact.label": "contacto",	
 	"auth.password":"password",
+	"username":"utilizador",
 	"leaderboard.label":"leaderboard",
 	"services.label":"serviços",
 	"servicesprovided.label":"serviços prestados",
